# vidra

./: .env.example  .gitignore  BUILD-PLAN.md  COOLIFY-DEPLOY.md  Dockerfile.api  POSTHOG-DEPLOY.md  PRODUCT-ROADMAP.md  README.md  docker-compose.yml
api/: alembic.ini  pyproject.toml
api/migrations/: README.md  env.py
api/migrations/versions/: 20260302_0001_initial.py  20260303_0002_persona_gender_profile_status.py  20260303_0003_model_preferences_and_persona_loras.py
api/vidra_api/: __init__.py  auth.py  config.py  database.py  deps.py  main.py  models.py  models_referral_addition.py  persona_intel.py  plans.py  schemas.py
api/vidra_api/offline/: __init__.py  generator.py
api/vidra_api/paid/: __init__.py  generator.py
api/vidra_api/routes/: __init__.py  account.py  auth.py  billing.py  calendar.py  consent.py  credits.py  dashboard.py  events.py  export.py  media.py  onboarding.py  personas.py  plans.py  referrals.py  streak.py  studio.py
api/vidra_api/services/: model_preferences.py  streak.py  wallet.py
api/vidra_api/utils/: limiter.py  security.py
life-framework-v1/: .env.example  .gitignore  README.md  pyproject.toml
life-framework-v1/.agent/workflows/: life.md
life-framework-v1/life/: __init__.py  cli.py
life-framework-v1/life/ai/: __init__.py  llm.py  search.py
life-framework-v1/life/core/: __init__.py  calendar.py  narrative.py  persona.py  scene.py  tokens.py  wardrobe.py
life-framework-v1/life/generators/: __init__.py  appearance.py  backstory.py  caption.py  prompt.py  world.py
life-framework-v1/life/utils/: __init__.py  scoring.py
(+36 files in other folders)
