[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vidra-api"
version = "0.1.0"
description = "Vidra API"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "sqlalchemy[asyncio]>=2.0.30",
  "asyncpg>=0.30.0",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "python-multipart>=0.0.20",
  "pydantic-settings>=2.6.0",
  "httpx>=0.27.0",
  "pyyaml>=6.0.2",
  "stripe>=11.0.0",
  "email-validator>=2.2.0",
  "alembic>=1.16.0",
]

[tool.setuptools.packages.find]
include = ["vidra_api*"]
